cmake_minimum_required(VERSION 3.13)
set(CMAKE_VERBOSE_MAKEFILE on)

file(GLOB rnoh_color_matrix_image_filters_SRC CONFIGURE_DEPENDS *.cpp)
add_library(rnoh_color_matrix_image_filters SHARED ${rnoh_color_matrix_image_filters_SRC})
target_include_directories(rnoh_color_matrix_image_filters PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(rnoh_color_matrix_image_filters PUBLIC rnoh)